demo01/nexus-nodeport.yaml
kind: Service
apiVersion: v1
metadata:
  name: nexus
  namespace: nexus
spec:
  selector:
    app: nexus
  ports:
  - protocol: TCP
    targetPort: 8081
    port: 8081
    nodePort: 30009
    name: http
  type: NodePort
