demo01/nexus-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: nexus
  namespace: nexus
spec:
  selector:
    app: nexus
  ports:
  - protocol: TCP
    targetPort: 8081
    port: 8081
    name: http



  - protocol: TCP
    targetPort: 5000
    port: 5000
    name: docker
  type: ClusterIP
