demo01/nexus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  namespace: nexus
spec:
  rules:
  - host: nexus.local.com
    http:
       paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: nexus
              port: 
                number: 8081 
# Docker Host
  - host: docker.nexus.local.com
    http:
       paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: nexus
              port: 
                number: 5000
